Fix minor problems and add a tabular example

--- a/seu.cls
+++ b/seu.cls
@@ -16,6 +16,7 @@
 \usepackage{bm}
 \usepackage{indentfirst}
 \usepackage{abstract} 
+\usepackage{array}
 \usepackage{amsthm}
 \usepackage{booktabs}    
 \usepackage{siunitx}
