add multibib support

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,24 @@
 
 \documentclass{seu}
 
+% \newcites{book}{普通图书}
+% \newcites{conference}{会议录}
+% \newcites{gathering}{汇编}
+% \newcites{news}{报纸}
+\newcites{journal}{期刊}
+% \newcites{dissertation}{学位论文}
+% \newcites{report}{报告}
+% \newcites{standard}{标准}
+% \newcites{patent}{专利}
+% \newcites{database}{专利}
+% \newcites{computerprogram}{专利}
+% \newcites{electronicbulletins}{专利}
+% \newcites{archive}{档案}
+% \newcites{map}{舆图}
+% \newcites{dataset}{数据集}
+% \newcites{others}{其他}
+
+% 如果你需要上面中的bib条项就取消掉对应条例的注释，使用例子在citation节中
 
 \begin{document}
 
